# slice_deque

./: .codecov.yml  .travis.yml  Cargo.toml  README.md  license-mit.md  readme.md  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: main.yml
benches/: alloc.rs  get.rs  pop_back.rs  pop_front.rs  push_back.rs  push_front.rs  remove.rs
ci/: run.sh  run_san.sh  style.sh
examples/: san.rs
master/: aliases.js  rustdoc.css  search-index.js  settings.html  source-files.js
master/implementors/core/clone/: trait.Clone.js
master/implementors/core/cmp/: trait.Eq.js  trait.PartialEq.js  trait.PartialOrd.js
master/implementors/core/convert/: trait.AsMut.js  trait.AsRef.js  trait.From.js
master/implementors/core/default/: trait.Default.js
master/implementors/core/fmt/: trait.Debug.js
master/implementors/core/hash/: trait.Hash.js
master/implementors/core/iter/iterator/: trait.Iterator.js
master/implementors/core/iter/traits/: trait.DoubleEndedIterator.js  trait.ExactSizeIterator.js  trait.Extend.js  trait.FromIterator.js  trait.FusedIterator.js  trait.IntoIterator.js  trait.TrustedLen.js
master/implementors/core/iter/traits/collect/: trait.Extend.js  trait.FromIterator.js  trait.IntoIterator.js
master/implementors/core/iter/traits/double_ended/: trait.DoubleEndedIterator.js
master/implementors/core/iter/traits/iterator/: trait.Iterator.js
master/implementors/core/marker/: trait.Send.js  trait.Sync.js
master/implementors/core/ops/deref/: trait.Deref.js  trait.DerefMut.js
master/implementors/core/ops/drop/: trait.Drop.js
master/slice_deque/: AllocError.t.html  SliceDeque.t.html  all.html  enum.AllocError.html  index.html  macro.sdeq.html  sdeq.m.html  sidebar-items.js  struct.Buffer.html  struct.Drain.html  struct.DrainFilter.html  struct.IntoIter.html  struct.SliceDeque.html  struct.Splice.html
master/slice_deque/mirrored/: enum.AllocError.html
master/slice_deque/mirrored/buffer/: struct.Buffer.html
master/src/slice_deque/: lib.rs.html  macros.rs.html  nonnull.rs.html
master/src/slice_deque/mirrored/: buffer.rs.html  linux.rs.html  mod.rs.html
san/: Cargo.toml
san/src/: main.rs
slice-deque-fuzz/: Cargo.toml
slice-deque-fuzz/src/: main.rs
src/: lib.rs  macros.rs  nonnull.rs
src/mirrored/: buffer.rs  bytes.rs  darwin.rs  kernel32.rs  libc.rs  linux.rs  macos.rs  mod.rs  sysv.rs  winapi.rs
src/mirrored/alloc/: linux.rs  macos.rs  mod.rs  sysv.rs  winapi.rs
