[package]
name = "slice-deque"
version = "0.1.0"
authors = ["gnzlbg <gonzalobg88@gmail.com>"]
description = "A double-ended queue that Deref's into a slice."
documentation = "https://docs.rs/slice_deque"
homepage = "https://github.com/gnzlbg/slice_deque"
repository = "https://github.com/gnzlbg/slice_deque"
readme = "readme.md"
keywords = ["collection", "deque"]
categories = ["data-structures"]
license = "MIT/Apache-2.0"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
mach = "0.1.*"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.*", features = ["memoryapi", "handleapi", "sysinfoapi", "winbase"] }

[profile.bench]
opt-level = 0 # 3
debug = true # false
rpath = true # false
lto = false # true
debug-assertions = false
codegen-units = 1
panic = 'unwind' # 'abort'