[package]
name = "slice-deque"
version = "0.1.1"
authors = ["gnzlbg <gonzalobg88@gmail.com>"]
description = "A double-ended queue that Deref's into a slice."
documentation = "https://docs.rs/crate/slice-deque/"
homepage = "https://github.com/gnzlbg/slice_deque"
repository = "https://github.com/gnzlbg/slice_deque"
readme = "readme.md"
keywords = ["collection", "deque"]
categories = ["data-structures"]
license = "MIT/Apache-2.0"

[badges]
appveyor = { repository = "gnzlbg/slice_deque" }
travis-ci = { repository = "gnzlbg/slice_deque" }
coveralls = { repository = "gnzlbg/slice_deque" }
is-it-maintained-issue-resolution = { repository = "gnzlbg/slice_deque" }
is-it-maintained-open-issues = { repository = "gnzlbg/slice_deque" }
maintenance = { status = "experimental" }

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
mach = "0.1.*"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.*", features = ["memoryapi", "handleapi", "sysinfoapi", "winbase"] }

[features]
bytes_buf = ["bytes"]

[dependencies]
bytes = { version = "0.4.*", optional = true }

[profile.dev]
opt-level = 0
debug = true
rpath = true
lto = false
debug-assertions = true
codegen-units = 4
panic = 'unwind'

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
