# This cargo file is used exclusively for development. It includes
# dev-dependencies which causes 
[package]
name = "slice-deque"
version = "0.3.0"
authors = ["gnzlbg <gonzalobg88@gmail.com>"]
description = "A double-ended queue that Deref's into a slice."
documentation = "https://docs.rs/crate/slice-deque/"
homepage = "https://github.com/gnzlbg/slice_deque"
repository = "https://github.com/gnzlbg/slice_deque"
readme = "readme.md"
keywords = ["collection", "deque", "ring", "circular", "buffer"]
categories = ["data-structures", "no-std"]
license = "MIT/Apache-2.0"
edition = "2018"

[badges]
appveyor = { repository = "gnzlbg/slice_deque" }
travis-ci = { repository = "gnzlbg/slice_deque" }
codecov = { repository = "gnzlbg/slice_deque" }
is-it-maintained-issue-resolution = { repository = "gnzlbg/slice_deque" }
is-it-maintained-open-issues = { repository = "gnzlbg/slice_deque" }
maintenance = { status = "experimental" }

[target.'cfg(all(any(target_os = "macos", target_os = "ios"), not(feature = "unix_sysv")))'.dependencies.mach]
version = "0.3"
default-features = false

[target.'cfg(target_os = "windows")'.dependencies.winapi]
version = "0.3.*"
features = ["memoryapi", "handleapi", "sysinfoapi", "winbase"]
default-features = false

[features]
default = [ "use_std" ]

# Enables features that require the standard library
use_std = [ "libc/use_std" ]
# Enables support for the bytes_buf trait. That is,
# SliceDeque implements the Buf and BufMut traits.
#bytes_buf = ["bytes", "use_std"]
# Uses a super-portable but potentially slower System V interprocess
# shared-memory implementation instead of system-specific ones on unix-like
# targets.
unix_sysv = []

#[dependencies]
#bytes = { version = "0.4.*", optional = true }

[target.'cfg(any(unix, target_os = "dragonfly"))'.dependencies.libc]
version = "0.2"
default-features = false

[profile.dev]
opt-level = 0
debug = true
lto = false
debug-assertions = true
codegen-units = 4
incremental = true
panic = 'unwind'

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
